Dynegy/src/objects/Vendor_Meter__c.object
<CustomObject>
    <fields>
        <fullName>Advanced_Metering_Indicator__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Advanced Metering Indicator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Effective_Date__c</fullName>
        <description>This field is created for the Meter Exceptions.</description>
        <formula>DASR_Request__r.Change_Effective_Date__c</formula>
        <label>Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DASR_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DASR Request</label>
        <referenceTo>DASR_Request__c</referenceTo>
        <relationshipLabel>Vendor Meter</relationshipLabel>
        <relationshipName>Vendor_Meter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Voltage__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Delivery Voltage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Loss_Factor__c</fullName>
        <description>This new field is created to store the distribution loss factor</description>
        <label>Distribution Loss Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESP_Rate_Code__c</fullName>
        <label>ESP Rate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipLabel>Vendor Meter</relationshipLabel>
        <relationshipName>Vendor_Meter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LDC_Meter_Cycle__c</fullName>
        <label>LDC Meter Cycle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Rate_Class__c</fullName>
        <label>LDC Rate Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Rate_Subclass__c</fullName>
        <label>LDC Rate Subclass</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Profile_Description__c</fullName>
        <label>Load Profile Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Profile__c</fullName>
        <label>Load Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Maintenance_Code__c</fullName>
        <label>Meter Maintenance Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Multiplier_Quantity__c</fullName>
        <label>Meter Multiplier Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meter_Number__c</fullName>
        <externalId>true</externalId>
        <label>Meter Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Service_Voltage__c</fullName>
        <label>Meter Service Voltage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Type_Code__c</fullName>
        <label>Meter Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Type__c</fullName>
        <description>This field is created to handle net metering</description>
        <label>Net Meter Type</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM-BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM-GG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM-GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XY</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_Of_Dials_Quantity__c</fullName>
        <label>Number Of Dials Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Meter_Number__c</fullName>
        <externalId>true</externalId>
        <label>Old Meter Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Point__c</fullName>
        <description>This field is created for Meter Exceptions.</description>
        <label>Service Point</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Voltage__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Supply Voltage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Of_Use_Metering__c</fullName>
        <label>Time Of Use Metering</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CCF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kVAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KVARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kVARh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kWh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Megawatt Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Megawatt House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vendor Meter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>Meter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Meter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>